# nesto

./: CMakeLists.txt  main.cpp  os.h
core/: DataProvider.cpp  DataProvider.h  JsonSerializable.cpp  JsonSerializable.h  StringSerializable.cpp  StringSerializable.h
core/config/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  Configuration.cpp  Configuration.h
core/data/: DataProvider.cpp  DataProvider.h  SeparatelyStoredFileStream.cpp  SeparatelyStoredFileStream.h
core/data/models/: IndexFile.cpp  IndexFile.h  StoredFile.cpp  StoredFile.h
core/security/: HashProvider.cpp  HashProvider.h
logs/: LogProvider.cpp  LogProvider.h  Logger.cpp  Logger.h
network/: TcpSocket.cpp  TcpSocket.h
threads/: BackgroundService.cpp  BackgroundService.h
